--- a/app.json
+++ b/app.json
@@ -25,6 +25,7 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": "React Native with Axios for WEB API"
   }
 }
